fix exposed token security issue, create README.md

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-CLIENT_ID=DEVELOPMENT
-CLIENT_SECRET=SECRET_123
+SECRET_KEY="django-insecure-#p%++)mr+fmax854z9^aq#_v)hk3k20i4fp8ez78ni)k7&oq09"
+DEBUG=True
+
+VITE_CLIENT_ID=DEVELOPMENT
+VITE_CLIENT_SECRET=SECRET_123
