--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,8 @@ services:
       dockerfile: Dockerfile.vite
     container_name: vite-pet-advisor
     command: npm run dev -- --host
+    env_file:
+      - .env
     ports:
       - "5173:5173"
     volumes:
@@ -17,6 +19,8 @@ services:
       dockerfile: Dockerfile.django
     container_name: django-pet-advisor
     command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    env_file:
+      - .env
     volumes:
       - ./app:/app
     ports:
